ingress-rancher.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: rancher
    cert-manager.io/issuer-kind: Issuer
    field.cattle.io/publicEndpoints: '[{"addresses":["51.105.201.27"],"port":443,"protocol":"HTTPS","serviceName":"cattle-system:rancher","ingressName":"cattle-system:rancher","hostname":"rancher.marketplace.lab-danger-zone.online","path":"/","allNodes":false}]'
    meta.helm.sh/release-name: rancher
    meta.helm.sh/release-namespace: cattle-system
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
  creationTimestamp: "2023-09-22T17:01:11Z"
  generation: 3
  labels:
    app: rancher
    app.kubernetes.io/managed-by: Helm
    chart: rancher-2.7.6
    heritage: Helm
    release: rancher
  name: rancher
  namespace: cattle-system
  resourceVersion: "273969"
  uid: 6b48c18d-a9ed-4e0f-b88a-3309715a0c1f
spec:
  ingressClassName: nginx
  rules:
  - host: rancher.marketplace.51.105.201.27.nip.io
    http:
      paths:
      - backend:
          service:
            name: rancher
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - rancher.marketplace.51.105.201.27.nip.io
    secretName: tls-rancher-ingress
status:
  loadBalancer:
    ingress:
    - ip: 51.105.201.27
